# design_patterns

./: meson.build
command/: meson.build
command/src/: command.cpp  frogyy.cpp  undo_redo.cpp
flyweight/: meson.build
flyweight/src/: flyweight.cpp
observer/: meson.build
observer/src/: observer.cpp
singleton/: meson.build
singleton/src/: singleton.cpp
src/: main.cpp
state/: meson.build
state/src/: audio_player.hpp  state.cpp
